--- a/custom_components/wellbeing/manifest.json
+++ b/custom_components/wellbeing/manifest.json
@@ -1,12 +1,14 @@
 {
-  "domain": "wellbeing",
-  "name": "Electrolux Wellbeing",
-  "codeowners": ["@JohNan"],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://github.com/JohNan/homeassistant-wellbeing",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/JohNan/homeassistant-wellbeing/issues",
-  "requirements": [],
-  "version": "v0.0.0"
+    "codeowners": [
+        "@JohNan"
+    ],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/JohNan/homeassistant-wellbeing",
+    "domain": "wellbeing",
+    "iot_class": "cloud_polling",
+    "issue_tracker": "https://github.com/JohNan/homeassistant-wellbeing/issues",
+    "name": "Electrolux Wellbeing",
+    "requirements": [],
+    "version": "0.0.1"
 }
